# memc-rs

./: Cargo.toml  README.md
memclt/src/: main.rs
memcrs/: Cargo.toml  build.rs
memcrs-common/: Cargo.toml
memcrs-common/src/: lib.rs  network.rs
memcrs-ebpf/: Cargo.toml
memcrs-ebpf/src/: main.rs
memcrs/src/cache/: pending_tasks_runner.rs
memcrs/src/memcache/cli/: parser.rs
memcrs/src/memcache_server/: memc_tcp.rs  runtime_builder.rs
memcrs/src/memory_store/: ebpf_map_store.rs  mod.rs
memcrs/src/server/: ebpf_util.rs  main.rs  mod.rs  timer.rs
memcrs/tests/: set_item_too_large.rs  set_max_item_check.rs
memcrs/tests/common/: mod.rs
