[package]
name = "memcrs-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
memcrs-common = { path = "../memcrs-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.1.0"
fnv = { version = "1.0.7", default-features = false }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "memcrs"
path = "src/main.rs"
